--- a/ProjectReport.tex
+++ b/ProjectReport.tex
@@ -215,6 +215,19 @@ cleaning and presenting data, \emph{dplyr} for data manipulation, and
 \begin{Shaded}
 \begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(tidyverse) }\CommentTok{\#aids in cleaning and presenting data}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: package 'dplyr' was built under R version 4.3.2
+\end{verbatim}
+
+\begin{verbatim}
+## Warning: package 'lubridate' was built under R version 4.3.2
+\end{verbatim}
+
+\begin{Shaded}
+\begin{Highlighting}[]
 \FunctionTok{library}\NormalTok{(dplyr) }\CommentTok{\#data manipulation}
 \FunctionTok{library}\NormalTok{(ggplot2) }\CommentTok{\#data visualization}
 \end{Highlighting}
